обновил скелет корзины

--- a/index.html
+++ b/index.html
@@ -151,11 +151,14 @@
           </div>
         </header>
         <section id="basket-list">
+          <li class="cartItem">
+            
+          </li>
           <!-- Добавленные товары здесь  -->
         </section>
-				<footer class="basket-footer">
-					<h2 class="basket-footer-title">Общая стоимость <span id="total-price">0</span> </h2>
-				</footer>
+        <footer class="basket-footer">
+          <h2 class="basket-footer-title">Общая стоимость: <span id="total-price">0</span> USD</h2>
+        </footer>
       </div>
     </dialog>
 
